--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.0.3",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
+    "@stripe/stripe-react-native": "0.50.3",
     "axios": "^1.7.9",
     "expo": "^54.0.23",
     "expo-dev-client": "~6.0.17",
@@ -25,6 +26,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.15",
     "expo-web-browser": "^15.0.6",
     "mime": "^4.0.7",
     "react": "19.1.0",
@@ -33,6 +35,7 @@
     "react-native-calendars": "^1.1310.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-iap": "^14.6.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~4.1.1",
@@ -42,8 +45,7 @@
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
-    "@stripe/stripe-react-native": "0.50.3"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
