--- a/app.json
+++ b/app.json
@@ -19,6 +19,9 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       },
+      "entitlements": {
+        "com.apple.developer.in-app-purchase": true
+      },
       "runtimeVersion": {
         "policy": "appVersion"
       }
