--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-iap": "^14.6.0",
     "react-native-mime-types": "^2.5.0",
+    "react-native-nitro-modules": "^0.32.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
