--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       "versionCode": 4,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ff0000"
       },
       "package": "com.ruffengineers.thechefdayapp",
       "runtimeVersion": "1.0.0"
